# neftittest

./: .gitignore  ACHIEVEMENT_SYSTEM_IMPLEMENTATION_SUMMARY.md  ADD_BALANCE_CHECK_TO_UI.md  APPLY_THIS_FIX_ALL_ISSUES.sql  AUTHENTICATION_RECOVERY_SUMMARY.md  BALANCE_CHECK_TOAST_FIX.md  BALANCE_IMPLEMENTATION_SUMMARY.md  BURN_CHAIN_BREAKDOWN_UI.md  BURN_CHAIN_VALIDATION_FIX.md  BURN_ERROR_FIX.md  BURN_FIX_SUMMARY.md  BURN_UI_IMPLEMENTATION_SUMMARY.md  CHAIN_NFT_DEPLOYMENT.md  CHAIN_VALIDATION_SOLUTION.md  CLAIM_TOAST_FIX.md  CLEAR_STORAGE_TEST.html  COMPLETE_8_METHOD_AUTHENTICATION_FIX.md  COMPLETE_ACHIEVEMENTS_SYSTEM_FINAL.sql  COMPLETE_CHECKIN_ACHIEVEMENT_FIX.sql  COMPLETE_DAILY_CLAIM_FIX.sql  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_FIX_ALL_5_REWARD_SYSTEMS.sql  CORRECTED_DEFINITIVE_RESTORE.sql  CRITICAL_STAKING_FIXES_SUMMARY.md  DEBUG_ACHIEVEMENTS.sql  DEBUG_NFT_METADATA_FETCHING.cjs  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_STATUS_SUMMARY.md  DEPLOY_CHAIN_SPECIFIC_REWARDS.md  DEPLOY_LOW_EGRESS_CAMPAIGNS.md  DEPLOY_LOW_EGRESS_DAILY_CLAIMS.md  DEPLOY_MANUAL_NFT_DISTRIBUTION.md  DEPLOY_NFT_CLAIM_FIXES.sql  DEPLOY_UNIFIED_BALANCE_SYSTEM.md  DEPLOY_UNIQUE_CID_SYSTEM.sql  DIAGNOSE_DISCORD_TASKS.sql  DIAGNOSE_NO_ACHIEVEMENTS.sql  DISCORD_ROBUST_SETUP.md  DISCORD_SETUP.md  DISCOVER_PROJECTDETAILS_ANALYSIS.md  (+305 more)
app/: router.tsx
backend/: README.md  discord-verification-service-robust.js  discord-verification-service.js  package-lock.json  package.json  start.bat  (+17 more)
contracts/solana/programs/neftit-nft/: Cargo.toml
contracts/solana/programs/neftit-nft/src/: lib.rs
(+732 files in other folders)
