[package]
name = "neftit-nft"
version = "0.1.0"
description = "NEFTIT NFT program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "neftit_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
mpl-token-metadata = "1.13.2"
